Fix: fixing swagger doc, fixing user_id getting from middleware.
