# docs/swagger.json
@@ -183,44 +183,6 @@
                 }
             }
         },
-        "/api/v1/users/by-username": {
-            "get": {
-                "description": "Возвращает информацию о пользователе по его имени",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "users"
-                ],
-                "summary": "Получение пользователя по имени",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Имя пользователя",
-                        "name": "username",
-                        "in": "query",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/model.User"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
-                        }
-                    }
-                }
-            }
-        },
         "/api/v1/users/{id}": {
             "get": {
                 "description": "Возвращает информацию о пользователе по его ID",
