# internal/transfer/request/user_request.go
@@ -3,9 +3,9 @@ package request
 import "mime/multipart"
 
 type UserRequest struct {
-	Username    string `json:"username" binding:"required"`
-	About       string `json:"about"`
-	DateOfBirth string `json:"dateOfBirth"`
+	Username    string `form:"username" binding:"required"`
+	About       string `form:"about"`
+	DateOfBirth string `form:"dateOfBirth"`
 	Avatar      multipart.File
 	Header      *multipart.FileHeader
 }
